--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
+    "jotai": "^2.9.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.438.0",
     "pocketbase": "^0.21.5",
     "react": "^18.3.1",
