--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,12 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.6",
     "input-otp": "^1.2.4",
     "jotai": "^2.9.3",
     "js-cookie": "^3.0.5",
