--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.53.0",
     "react-page-scroller": "^3.0.1",
     "react-router-dom": "^6.26.1",
