--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://192.168.0.5:8090
+# VITE_API_URL=http://192.168.0.14:8090
 # VITE_API_URL=http://192.168.10.107:8090
-# VITE_API_URL=https://pre-rt-api.prod.appadem.in
+VITE_API_URL=https://pre-rt-api.prod.appadem.in
