--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "export": "node ./export.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -30,7 +31,7 @@
     "jotai": "^2.9.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.438.0",
-    "pocketbase": "^0.21.5",
+    "pocketbase": "^0.25.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
